--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <hr />
       <ul class="quotes"></ul>
     </div>
-    <script src="ajax.js"></script>
-    <!-- <script src="fetch.js"></script> -->
+    <!-- <script src="ajax.js"></script> -->
+    <script src="fetch.js"></script>
   </body>
 </html>
